6.0.1 - updated dependencies